EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Behavior_Response__c/fields/hed__Behavior_Involvement__c.field-meta.xml
<CustomField>
    <fullName>hed__Behavior_Involvement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Behavior Involvement record this Behavior Response is for.</description>
    <inlineHelpText>El registro Implicación de comportamiento para el que es esta Respuesta de comportamiento.</inlineHelpText>
    <label>Behavior Involvement</label>
    <referenceTo>hed__Behavior_Involvement__c</referenceTo>
    <relationshipLabel>Behavior Responses</relationshipLabel>
    <relationshipName>Behavior_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>