EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Behavior_Response__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <description>The recipient of this Behavior Response (read-only).</description>
    <formula>HYPERLINK(&quot;/&quot; + hed__Behavior_Involvement__r.hed__Contact__c, hed__Behavior_Involvement__r.hed__Contact__r.FirstName + &quot; &quot; + hed__Behavior_Involvement__r.hed__Contact__r.LastName)</formula>
    <inlineHelpText>El destinatario de esta Respuesta de comportamiento (solo lectura).</inlineHelpText>
    <label>Contact</label>
    <type>Text</type>
</CustomField>