EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Behavior_Response__c/fields/hed__Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Type__c</fullName>
    <description>The response to the behavior event, for example, Academic Probation, Expulsion, or Other.</description>
    <inlineHelpText>La respuesta al evento de comportamiento, como por ejemplo Periodo de prueba académico, Expulsión u Otro.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Probation</fullName>
            </value>
            <value>
                <fullName>Expulsion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>